add GetListByUserIDExcludeRejected
